...
}


@Composable
fun HomeScreen(navController: NavController, context: Context, materialColorTheme : ColorScheme) {
    var selectedTabIndex by remember { mutableStateOf(0) }
    val tabs = listOf("Home", "Reading Light", "Call Assistance", "Shopping")
    Column(
        modifier = Modifier.fillMaxSize(),
        verticalArrangement = Arrangement.Top,
        horizontalAlignment = Alignment.CenterHorizontally,
    ) {
        Row(
...


        Button(onClick = {
            isLightOn = !isLightOn
            saveLightState(context, isLightOn)
        },
                modifier = Modifier.width(150.dp).height(70.dp).testTag("readingLightOnOffButton")
            // Adjust the size as needed
        ) {
            Row (
                verticalAlignment = Alignment.CenterVertically
            ){
                Icon(
...
            ),
            enabled = !isBlinking,
            modifier = Modifier
                .padding(16.dp)
                .height(60.dp)
                .width(200.dp)
                .testTag("callButton")
                .semantics { contentDescription = if (buttonColor != originalColor) "Blue button" else "Red button" }
        ) {
            Text(
                text = "Call Assistance",
                color = Color.White,
                style = MaterialTheme.typography.bodyLarge
            )
        }
    }
}

@Composable
fun ShoppingScreen(context: Context) {
    var selectedCategory by remember { mutableStateOf("mains") }
    var products by remember { mutableStateOf(listOf<ProductItem>()) }
    var cart by remember { mutableStateOf<List<ProductItem>>(emptyList()) }
    var selectedProduct by remember { mutableStateOf<ProductItem?>(null) }
    var showProductDetails by remember { mutableStateOf(false) }
    var showCheckout by remember { mutableStateOf(false) }
    var paymentStatus by remember { mutableStateOf<String?>(null) }
...
        modifier = Modifier.fillMaxWidth(),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Top
    ) {
        // Category Tabs
        TabRow(
            selectedTabIndex = listOf("mains", "snacks", "drinks", "sides",).indexOf(selectedCategory),
            modifier = Modifier.testTag("categoryTabs"),
            ) {
            listOf("mains", "snacks", "drinks", "sides").forEach { category ->
                Tab(
                    selected = selectedCategory == category,
                    onClick = { selectedCategory = category
...
